change file name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "camunda-form-io-vue",
+  "name": "camunda-formio-tasklist-vue",
   "version": "0.1.0",
   "private": true,
   "scripts": {
