--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/vue-moment": "^4.0.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
@@ -18,6 +19,7 @@
     "vue-class-component": "^7.2.3",
     "vue-formio": "^4.0.7",
     "vue-loading-overlay": "^3.4.2",
+    "vue-moment": "^4.1.0",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
     "vue2-datepicker": "^3.9.0",
