--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "bootstrap-vue": "^2.21.2",
     "jsonwebtoken": "^8.5.1",
     "keycloak-js": "^12.0.2",
+    "moment": "^2.29.1",
     "vee-validate": "^3.4.5",
     "vue": "^2.6.10",
     "vue-class-component": "^7.2.3",
     "vue-formio": "^4.0.7",
     "vue-loading-overlay": "^3.4.2",
-    "vue-moment": "^4.1.0",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
     "vue2-datepicker": "^3.9.0",
