--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "keycloak-js": "^12.0.2",
     "moment": "^2.29.1",
     "vee-validate": "^3.4.5",
-    "vue": "^2.6.10",
+    "vue": "2.6.10",
     "vue-class-component": "^7.2.3",
     "vue-formio": "^4.0.7",
     "vue-loading-overlay": "^3.4.2",
