--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "2.6.10"
   },
   "files": [
     "dist/*",
