--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.4.0",
     "bootstrap-vue": "^2.21.2",
+    "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
     "keycloak-js": "^12.0.2",
     "moment": "^2.29.1",
+    "semantic-ui-css": "^2.4.1",
     "vee-validate": "^3.4.5",
     "vue": "2.6.10",
     "vue-class-component": "^7.2.3",
