--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.4.0",
     "bootstrap-vue": "^2.21.2",
+    "bpmn-js": "^8.2.2",
+    "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
     "keycloak-js": "^12.0.2",
     "moment": "^2.29.1",
+    "semantic-ui-css": "^2.4.1",
     "vee-validate": "^3.4.5",
     "vue": "2.6.10",
+    "vue-bpmn": "^0.2.2",
     "vue-class-component": "^7.2.3",
     "vue-formio": "^4.0.7",
     "vue-loading-overlay": "^3.4.2",
