--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "bootstrap-icons": "^1.4.0",
     "bootstrap-vue": "^2.21.2",
     "bpmn-js": "^8.2.2",
+    "crypto-js": "^4.0.0",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
     "keycloak-js": "^12.0.2",
     "moment": "^2.29.1",
     "semantic-ui-css": "^2.4.1",
+    "sockjs-client": "^1.5.1",
+    "stompjs": "^2.3.3",
     "vee-validate": "^3.4.5",
     "vue": "2.6.10",
     "vue-bpmn": "^0.2.2",
