--- a/package.json
+++ b/package.json
@@ -1,34 +1,15 @@
 {
-  "_args": [
-    [
-      "git+https://github.com/shabeeb-aot/camunda-formio-tasklist-vue.git",
-      "/Users/shabeeb/Work/bcgov/appointments/sb-fork/queue-management/frontend"
-    ]
-  ],
-  "_from": "git+https://github.com/shabeeb-aot/camunda-formio-tasklist-vue.git",
-  "_id": "camunda-formio-tasklist-vue@git+https://github.com/shabeeb-aot/camunda-formio-tasklist-vue.git#7cae9db25e3b91f50755e192391d95cf889bcb13",
-  "_inBundle": false,
-  "_integrity": "",
-  "_location": "/camunda-formio-tasklist-vue",
-  "_phantomChildren": {
-    "vue-class-component": "7.2.6"
-  },
-  "_requested": {
-    "type": "git",
-    "raw": "git+https://github.com/shabeeb-aot/camunda-formio-tasklist-vue.git",
-    "rawSpec": "git+https://github.com/shabeeb-aot/camunda-formio-tasklist-vue.git",
-    "saveSpec": "git+https://github.com/shabeeb-aot/camunda-formio-tasklist-vue.git",
-    "fetchSpec": "https://github.com/shabeeb-aot/camunda-formio-tasklist-vue.git",
-    "gitCommittish": null
-  },
-  "_requiredBy": [
-    "/"
-  ],
-  "_resolved": "git+https://github.com/shabeeb-aot/camunda-formio-tasklist-vue.git#7cae9db25e3b91f50755e192391d95cf889bcb13",
-  "_spec": "git+https://github.com/shabeeb-aot/camunda-formio-tasklist-vue.git",
-  "_where": "/Users/shabeeb/Work/bcgov/appointments/sb-fork/queue-management/frontend",
-  "author": {
-    "name": "faiz.shabeeb@aot-technologies.com"
+  "name": "camunda-formio-tasklist-vue",
+  "version": "1.0.0",
+  "description": "Vue components to integrate formsflow.ai",
+  "private": false,
+  "main": "./dist/camunda-formio-tasklist-vue.common.js",
+  "author": "faiz.shabeeb@aot-technologies.com",
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "build-package": "vue-cli-service build --target lib --name camunda-formio-tasklist-vue ./src/components/index.js"
   },
   "dependencies": {
     "@types/vue-moment": "^4.0.2",
@@ -43,20 +24,19 @@
     "moment": "^2.29.1",
     "semantic-ui-css": "^2.4.1",
     "vee-validate": "^3.4.5",
-    "vue": "2.6.10",
+    "vue": "2.6.12",
     "vue-bpmn": "^0.2.2",
     "vue-class-component": "^7.2.3",
     "vue-formio": "^4.0.7",
     "vue-loading-overlay": "^3.4.2",
-    "vue-property-decorator": "^8.4.2",
-    "vue-router": "^3.2.0",
+    "vue-property-decorator": "^9.1.2",
+    "vue-router": "3.5.1",
     "vue2-datepicker": "^3.9.0",
     "vuejs-logger": "^1.5.5",
     "vuelogger": "^1.0.14",
-    "vuex": "^3.4.0",
+    "vuex": "3.6.2",
     "vuex-class": "^0.3.2"
   },
-  "description": "Vue components to integrate formsflow.ai",
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.0",
     "@types/keycloak-js": "^3.4.1",
@@ -73,8 +53,8 @@
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
-    "typescript": "~3.9.3",
-    "vue-template-compiler": "2.6.10"
+    "typescript": "4.2.3",
+    "vue-template-compiler": "^2.6.12"
   },
   "files": [
     "dist/*",
@@ -84,15 +64,5 @@
     "public/*",
     "*.json",
     "*.js"
-  ],
-  "main": "./dist/camunda-formio-tasklist-vue.common.js",
-  "name": "camunda-formio-tasklist-vue",
-  "private": false,
-  "scripts": {
-    "build": "vue-cli-service build",
-    "build-package": "vue-cli-service build --target lib --name camunda-formio-tasklist-vue ./src/components/index.js",
-    "lint": "vue-cli-service lint",
-    "serve": "vue-cli-service serve"
-  },
-  "version": "1.0.0"
+  ]
 }
