--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
     "moment": "^2.29.1",
     "semantic-ui-css": "^2.4.1",
     "vee-validate": "^3.4.5",
-    "vue": "2.6.10",
+    "vue": "2.6.12",
     "vue-bpmn": "^0.2.2",
     "vue-class-component": "^7.2.3",
     "vue-formio": "^4.0.7",
     "vue-loading-overlay": "^3.4.2",
-    "vue-property-decorator": "^8.4.2",
-    "vue-router": "^3.2.0",
+    "vue-property-decorator": "^9.1.2",
+    "vue-router": "3.5.1",
     "vue2-datepicker": "^3.9.0",
     "vuejs-logger": "^1.5.5",
     "vuelogger": "^1.0.14",
-    "vuex": "^3.4.0",
+    "vuex": "3.6.2",
     "vuex-class": "^0.3.2"
   },
   "devDependencies": {
@@ -53,8 +53,8 @@
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
-    "typescript": "~3.9.3",
-    "vue-template-compiler": "2.6.10"
+    "typescript": "4.2.3",
+    "vue-template-compiler": "^2.6.12"
   },
   "files": [
     "dist/*",
