--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
     "vuejs-logger": "^1.5.5",
     "vuelogger": "^1.0.14",
     "vuex": "3.6.2",
-    "vuex-class": "^0.3.2"
+    "vuex-class": "^0.3.2",
+    "@types/crypto-js": "^4.0.0",
+    "@types/stompjs": "^2.3.3"
   },
   "devDependencies": {
-    "@types/crypto-js": "^4.0.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/keycloak-js": "^3.4.1",
     "@types/sockjs-client": "^1.5.0",
-    "@types/stompjs": "^2.3.3",
     "@types/vue2-datepicker": "^3.3.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
