--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vue-loading-overlay": "^3.4.2",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "3.5.1",
+    "vue-select": "^3.11.2",
     "vue2-datepicker": "^3.9.0",
     "vuejs-logger": "^1.5.5",
     "vuelogger": "^1.0.14",
@@ -48,6 +49,7 @@
     "@types/keycloak-js": "^3.4.1",
     "@types/lodash": "^4.14.168",
     "@types/sockjs-client": "^1.5.0",
+    "@types/vue-select": "^3.11.1",
     "@types/vue2-datepicker": "^3.3.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
