--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Vue components to integrate formsflow.ai",
   "private": false,
   "main": "./dist/camunda-formio-tasklist-vue.common.js",
-  "author": "faiz.shabeeb@aot-technologies.com",
+  "author": "support@aot-technologies.com",
+  "contributors": [
+    "Shabeeb <faiz.shabeeb@aot-technologies.com> (https://github.com/shabeeb-aot)"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -12,6 +15,8 @@
     "build-package": "vue-cli-service build --target lib --name camunda-formio-tasklist-vue ./src/components/index.js"
   },
   "dependencies": {
+    "@types/crypto-js": "4.0.0",
+    "@types/stompjs": "^2.3.3",
     "@types/vue-moment": "^4.0.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
@@ -22,6 +27,7 @@
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
     "keycloak-js": "^12.0.2",
+    "lodash.isequal": "^4.5.0",
     "moment": "^2.29.1",
     "semantic-ui-css": "^2.4.1",
     "sockjs-client": "^1.5.1",
@@ -34,18 +40,19 @@
     "vue-loading-overlay": "^3.4.2",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "3.5.1",
+    "vue-select": "^3.11.2",
     "vue2-datepicker": "^3.9.0",
     "vuejs-logger": "^1.5.5",
     "vuelogger": "^1.0.14",
     "vuex": "3.6.2",
-    "vuex-class": "^0.3.2",
-    "@types/crypto-js": "4.0.0",
-    "@types/stompjs": "^2.3.3"
+    "vuex-class": "^0.3.2"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.0",
     "@types/keycloak-js": "^3.4.1",
+    "@types/lodash": "^4.14.168",
     "@types/sockjs-client": "^1.5.0",
+    "@types/vue-select": "^3.11.1",
     "@types/vue2-datepicker": "^3.3.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
